Stopped scrollbar from pushing things left!

--- a/css/todo_layout.css
+++ b/css/todo_layout.css
@@ -1,3 +1,9 @@
+.modal-container.show {
+    pointer-events: auto;
+    opacity: 1;
+    transition: opacity 0.1s ease-in-out;
+}
+
 .modal-container {
     /* display: none; */
     background-color: rgb(0, 0, 0, 0.4);
@@ -9,9 +15,9 @@
     left: 0;
     height: 100vh;
     width: 100vw;
-    /* opacity: 0; */
-    opacity: 1;
-    /* pointer-events: none; */
+    opacity: 0;
+    /* opacity: 1; */
+    pointer-events: none;
     transition: opacity 0.05s ease-in-out;
 }
 
@@ -300,6 +306,7 @@ body {
     margin: 0;
     height: 783px;
     overflow: auto;
+    overflow-y: overlay;
 }
 
 #todo-list-items-div .list-item-card {
